Make sure that all information has flowed in before giving up on the job

Sometimes important information sent right before finishing can be lost.

BUG: 363198